# message_board

./: .gitignore  .gitmodules  Cargo.toml  README.md
client/: Cargo.toml
client/src/: api.rs  help_page_text.txt  input_field.rs  main.rs  newtui.rs  state.rs  tui.rs  utils.rs
interface/: Cargo.toml
interface/src/: lib.rs
server/: Cargo.toml
server/src/: database.rs  handlers.rs  main.rs  migrate_to_axum.rs  utils.rs  websocket.rs
