[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
interface = { path = "../interface" }
domtui = { git = "https://github.com/leslie255/domtui.git", tag = "v0.0.3" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
serde_json = "1.0"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = "0.12"
tokio-tungstenite = "0.23"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4", features = ["std", "serde"] }
flexi_logger = "0.29"
unicode-width = "0.1"
ratatui = "0.28"
copypasta = "0.10"

