[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tracing = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0"
tokio-tungstenite = "0.23"
hyper-tungstenite = "0.14"
futures-util = "0.3"
http-body-util = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
interface = { path = "../interface" }
log = { version = "0.4", features = ["std", "serde"] }
flexi_logger = "0.29"

