[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
interface = { path = "../interface" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tracing = "0.1"
serde_json = "1.0"
futures-util = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4", features = ["std", "serde"] }
flexi_logger = "0.29"

